--- a/index.html
+++ b/index.html
@@ -5,10 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
+    <script src="main.js" defer></script>
     <title>Document</title>
   </head>
   <body>
     <!-- reference -->
     <div class="reference"><div></div></div>
+    <div class="page-wrapper">
+      <header class="header js-header">
+        <div class="container">
+          <div class="logo">
+            <a href="#">tolmol <span>cleaning service</span></a>
+          </div>
+          <button type="button" class="nav-toggler js-nav-toggler">
+            <span></span>
+          </button>
+          <nav class="nav js-nav">
+            <ul>
+              <li><a href="#home">home</a></li>
+              <li><a href="#about">about</a></li>
+              <li><a href="#services">services</a></li>
+              <li><a href="#pricing">pricing</a></li>
+              <li><a href="#team">team</a></li>
+              <li><a href="#contact">contact</a></li>
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
   </body>
 </html>
