reveal header background

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <body>
     <!-- reference -->
     <div class="reference"><div></div></div>
+
     <div class="page-wrapper">
       <header class="header js-header">
         <div class="container">
@@ -33,5 +34,30 @@
         </div>
       </header>
     </div>
+    <br /><br /><br />
+    <h1>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet quos aliquid
+      veniam vitae mollitia modi eos consequuntur, officia ea, non dolores
+      temporibus, voluptate quia praesentium alias! Quasi, doloribus.
+      Recusandae, commodi dolorem. Blanditiis at quam fuga quasi molestias
+      ipsum. Sit id assumenda vel delectus, iure nihil eveniet veritatis tenetur
+      ad natus odio ipsam quis tempore dolorum? Architecto dolore debitis
+      laudantium nisi earum voluptates ipsum incidunt dolor impedit sequi
+      molestiae reprehenderit, doloribus totam similique modi laborum ullam
+      reiciendis amet, sunt tempore, exercitationem veniam molestias. Molestias
+      recusandae et cupiditate aut iure rem, dolorum labore, laudantium modi cum
+      consequuntur repudiandae, quasi a est accusamus. Fuga eaque tempore quas,
+      aut sed labore temporibus! Error minus delectus vel, accusamus quia non
+      quasi facere pariatur laboriosam, fugit voluptatibus? Laudantium odio quia
+      reprehenderit veniam quaerat quasi id cum suscipit enim alias aperiam
+      doloremque, sint, reiciendis, sunt iure provident tempore dolorem dolorum!
+      Explicabo ullam excepturi, dicta aperiam dolore eaque magni, quidem
+      numquam magnam quo ipsam sequi repellat delectus incidunt quam. Facilis
+      itaque voluptate omnis sunt exercitationem, enim temporibus, ullam
+      molestias sed illum dolorem nulla voluptates dolore quas magnam eveniet
+      tenetur blanditiis optio odit veniam excepturi quasi consectetur. Expedita
+      odio quod voluptate eaque suscipit tenetur pariatur optio mollitia quae
+      architecto.
+    </h1>
   </body>
 </html>
