complete about section

--- a/index.html
+++ b/index.html
@@ -57,5 +57,37 @@
         </div>
       </div>
     </section>
+
+    <section class="about section-padding" id="about">
+      <div class="container">
+        <div class="grid">
+          <div class="about-image">
+            <div class="image-box">
+              <img src="images/about.png" alt="about image" />
+              <div class="box box-1">
+                <span>2.5k</span>
+                <p>satisfied clients</p>
+              </div>
+            </div>
+          </div>
+          <div class="about-text">
+            <div class="section-title">
+              <span class="title">abous us</span>
+              <h2 class="sub-title">we're cleaning since 2010</h2>
+            </div>
+            <p>
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas
+              sapiente incidunt ipsum iusto rerum ea quaerat architecto nemo
+              dolorem dignissimos.
+            </p>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt
+              deserunt vitae enim quod quae incidunt ipsum praesentium porro
+              distinctio ab?
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
