--- a/index.html
+++ b/index.html
@@ -89,5 +89,46 @@
         </div>
       </div>
     </section>
+
+    <section class="services section-padding" id="services">
+      <div class="container">
+        <div class="section-title">
+          <span class="title">services</span>
+          <h2 class="sub-title">what we do</h2>
+        </div>
+        <div class="grid">
+          <div class="services-item">
+            <div class="image-box">
+              <img src="images/service/house.jpg" alt="carpet cleaning" />
+            </div>
+            <h3>carpet cleaning</h3>
+          </div>
+
+          <div class="services-item">
+            <div class="image-box">
+              <img src="images/service/window.jpg" alt="window cleaning" />
+            </div>
+            <h3>window cleaning</h3>
+          </div>
+
+          <div class="services-item">
+            <div class="image-box">
+              <img src="images/service/bathroom.jpg" alt="bathroom cleaning" />
+            </div>
+            <h3>bathroom cleaning</h3>
+          </div>
+
+          <div class="services-item">
+            <div class="image-box">
+              <img
+                src="images/service/furniture.png"
+                alt="furniture cleaning"
+              />
+            </div>
+            <h3>furniture cleaning</h3>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
