start adding pricing

--- a/index.html
+++ b/index.html
@@ -130,5 +130,17 @@
         </div>
       </div>
     </section>
+
+    <section class="pricing section-padding" id="pricing">
+      <div class="container">
+        <div class="section-title">
+          <span class="title">pricing</span>
+          <h2 class="sub-title">our pricing plans</h2>
+        </div>
+        <div class="grid">
+          <div class="pricing-item basic"></div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
