--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- reference -->
-    <div class="reference"><div></div></div>
+    <!-- <div class="reference"><div></div></div> -->
 
     <div class="page-wrapper">
       <header class="header js-header">
