complete pricing section

--- a/index.html
+++ b/index.html
@@ -142,7 +142,62 @@
           <h2 class="sub-title">our pricing plans</h2>
         </div>
         <div class="grid">
-          <div class="pricing-item basic"></div>
+          <div class="pricing-item">
+            <div class="pricing-header">
+              <h3>basic</h3>
+              <div class="price"><span>$299</span>monthly</div>
+            </div>
+            <div class="pricing-body">
+              <ul>
+                <li><i class="fas fa-check"></i>window cleaning</li>
+                <li><i class="fas fa-check"></i>carper cleaning</li>
+                <li><i class="fas fa-times"></i>furniture cleaning</li>
+                <li><i class="fas fa-times"></i>car cleaning</li>
+                <li><i class="fas fa-times"></i>bathroom cleaning</li>
+              </ul>
+            </div>
+            <div class="pricing-footer">
+              <a href="#" class="button">get started</a>
+            </div>
+          </div>
+
+          <div class="pricing-item">
+            <div class="pricing-header">
+              <h3>standard</h3>
+              <div class="price"><span>$499</span>monthly</div>
+            </div>
+            <div class="pricing-body">
+              <ul>
+                <li><i class="fas fa-check"></i>window cleaning</li>
+                <li><i class="fas fa-check"></i>carper cleaning</li>
+                <li><i class="fas fa-check"></i>furniture cleaning</li>
+                <li><i class="fas fa-check"></i>car cleaning</li>
+                <li><i class="fas fa-times"></i>bathroom cleaning</li>
+              </ul>
+            </div>
+            <div class="pricing-footer">
+              <a href="#" class="button">get started</a>
+            </div>
+          </div>
+
+          <div class="pricing-item">
+            <div class="pricing-header">
+              <h3>premium</h3>
+              <div class="price"><span>$899</span>monthly</div>
+            </div>
+            <div class="pricing-body">
+              <ul>
+                <li><i class="fas fa-check"></i>window cleaning</li>
+                <li><i class="fas fa-check"></i>carper cleaning</li>
+                <li><i class="fas fa-check"></i>furniture cleaning</li>
+                <li><i class="fas fa-check"></i>car cleaning</li>
+                <li><i class="fas fa-check"></i>bathroom cleaning</li>
+              </ul>
+            </div>
+            <div class="pricing-footer">
+              <a href="#" class="button">get started</a>
+            </div>
+          </div>
         </div>
       </div>
     </section>
