--- a/index.html
+++ b/index.html
@@ -202,6 +202,46 @@
       </div>
     </section>
 
+    <section class="team section-padding" id="team">
+      <div class="container">
+        <div class="section-title">
+          <span class="title">team</span>
+          <h2 class="sub-title">meet our team</h2>
+        </div>
+        <div class="grid">
+          <div class="team-item">
+            <div class="image-box">
+              <img src="images/team/1.png" alt="team one" />
+            </div>
+            <div class="detail">
+              <h3>john doe</h3>
+              <p>team leader</p>
+            </div>
+          </div>
+
+          <div class="team-item">
+            <div class="image-box">
+              <img src="images/team/2.png" alt="team two" />
+            </div>
+            <div class="detail">
+              <h3>may toe</h3>
+              <p>car cleaner</p>
+            </div>
+          </div>
+
+          <div class="team-item">
+            <div class="image-box">
+              <img src="images/team/3.png" alt="team three" />
+            </div>
+            <div class="detail">
+              <h3>tom bown</h3>
+              <p>cleaner</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <div class="style-switcher js-style-switcher">
       <button
         type="button"
