complete contact form

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- reference -->
-    <!-- <div class="reference"><div></div></div> -->
+    <div class="reference"><div></div></div>
 
     <div class="page-wrapper">
       <header class="header js-header">
@@ -237,6 +237,76 @@
               <h3>tom bown</h3>
               <p>cleaner</p>
             </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="contact section-padding" id="contact">
+      <div class="container">
+        <div class="section-title">
+          <span class="title">contact us</span>
+          <h2 class="sub-title">have any question?</h2>
+        </div>
+        <div class="grid contact-grid">
+          <div class="contact-info">
+            <div class="contact-info-item">
+              <i class="fas fa-map-marker-alt"></i>
+              <h3>address</h3>
+              <p>
+                Friedrichstraße 123 C<br />
+                10521 Berlin
+              </p>
+            </div>
+
+            <div class="contact-info-item">
+              <i class="fas fa-phone"></i>
+              <h3>call us</h3>
+              <p>+49 176 23 42 5***</p>
+            </div>
+
+            <div class="contact-info-item">
+              <i class="fas fa-envelope"></i>
+              <h3>email us</h3>
+              <p>hello@tolmol.com</p>
+            </div>
+          </div>
+          <div class="contact-form">
+            <form action="#">
+              <div class="input-box">
+                <input
+                  type="text"
+                  placeholder="Name"
+                  class="input-control"
+                  required
+                />
+              </div>
+
+              <div class="input-box">
+                <input
+                  type="text"
+                  placeholder="Email"
+                  class="input-control"
+                  required
+                />
+              </div>
+
+              <div class="input-box">
+                <input type="text" placeholder="Phone" class="input-control" />
+              </div>
+
+              <div class="input-box">
+                <textarea
+                  type="text"
+                  placeholder="Message"
+                  class="input-control"
+                  required
+                ></textarea>
+              </div>
+              <div class="button-wrapper">
+                <button type="submit" class="button">send message</button>
+              </div>
+            </form>
           </div>
         </div>
       </div>
