--- a/index.html
+++ b/index.html
@@ -312,6 +312,18 @@
       </div>
     </section>
 
+    <footer class="footer">
+      <div class="container">
+        <h3>follow us</h3>
+        <div class="social-links">
+          <a href="#" title="facebook"><i class="fab fa-facebook"></i></a
+          ><a href="#" title="twitter"><i class="fab fa-twitter"></i></a
+          ><a href="#" title="instagram"><i class="fab fa-instagram"></i></a
+          ><a href="#" title="youtube"><i class="fab fa-youtube"></i></a>
+        </div>
+      </div>
+    </footer>
+
     <div class="style-switcher js-style-switcher">
       <button
         type="button"
