--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="node_modules/@fortawesome/fontawesome-free/css/all.min.css"
     />
     <script src="main.js" defer></script>
-    <title>Document</title>
+    <title>TOLMOL - Cleaning Service</title>
   </head>
   <body>
     <!-- reference -->
